xterm (243-1) UNRELEASED; urgency=low

  * New upstream release (closes: #526334)
    + fixes bell regression (closes: #520405)
  * Refresh patch stack.
  * Defaults for allow-{tcap,window,font}ops are now set from debian/rules
    instead of the relevant patches, which now only touch the manpage.

 -- Julien Cristau <jcristau@debian.org>  Mon, 25 May 2009 19:32:11 +0200

xterm (242-1) unstable; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Wed, 18 Mar 2009 15:37:18 +0100

xterm (241-1) unstable; urgency=low

  * New upstream release.
  * Drop patch 905_tcapops.diff, allowTcapOps now defaults to false upstream.
  * Refresh patches 901_xterm_manpage.diff, 902_pointermode_never.diff,
    903_windowops.diff, 904_fontops.diff.

 -- Julien Cristau <jcristau@debian.org>  Sun, 01 Feb 2009 00:15:50 +0100

xterm (239-1) unstable; urgency=low

  * New upstream release.
    + correct a cast in input.c, which broke translation of numeric keypad
      codes to pageup, pagedown, etc., on 64-bit platform (closes: #511138).
  * debian/copyright: Update Thomas Dickey's copyright notices

 -- Julien Cristau <jcristau@debian.org>  Sat, 10 Jan 2009 19:22:31 +0100

xterm (238-2) unstable; urgency=low

  * Also default allowTcapOps to false, as suggested by Florian Weimer.

 -- Julien Cristau <jcristau@debian.org>  Sun, 04 Jan 2009 14:57:43 +0100

xterm (238-1) unstable; urgency=low

  * New upstream release.
    + respond to incorrectly formatted DECRQSS with a cancel
      (closes: #510030).  Reference: CVE-2008-2383.
  * Default the allowWindowOps and allowFontOps resources to false, to prevent
    potential security issues.  Thanks to Paul Szabo.

 -- Julien Cristau <jcristau@debian.org>  Sat, 03 Jan 2009 17:35:46 +0100

xterm (237-1) unstable; urgency=low

  * debian/rules: don't fail in patch if the patches are already applied; also
    create the patch stamp in the same way as the other stamp files
    (closes: #498327).  Thanks, Petr Salinger!